# verifiable-credentials-sdk

./: .gitignore  CHANGELOG  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  dfx.json  tsconfig.json
.github/: pull_request_template.md
.github/actions/prepare/: action.yml
.github/workflows/: checks.yml  nightly.yml  playwright.yml  publish-crate.yml  publish.yml  release.yml  rust.yml
cargo-license-patch/: Cargo.toml  README.md
dummy-e2e/: create-env-vars.sh  package-lock.json  package.json  playwright.config.ts
dummy-e2e/src/: vc-flow.spec.ts
dummy-e2e/src/utils/: sigin-in-user.utils.ts
dummy-issuer/: Cargo.toml  README.md  build.sh  dummy_issuer.did
dummy-issuer/src/: lib.rs
dummy-issuer/tests/: dummy_issuer.rs
dummy-relying-party/: Cargo.toml  README.md  build.sh  dummy_relying_party.did
dummy-relying-party/frontend/: index.html  package-lock.json  package.json
dummy-relying-party/frontend/src/: main.ts
dummy-relying-party/src/: lib.rs
js-client-relying-party/: .eslintrc.json  README.md  esbuild.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
js-client-relying-party/src/: main.ts  requestVerifiableCredentials.ts
js-client-relying-party/src/tests/: requestVerifiableCredentials.spec.ts
js-library/: .eslintrc.json  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
js-library/scripts/: package-next  publish-npm.sh  update-version.mjs
js-library/src/: index.ts  request-verifiable-presentation.ts
js-library/src/tests/: mocks.ts  request-verifiable-presentation.spec.ts
rust-packages/ic-verifiable-credentials/: Cargo.toml  README.md
rust-packages/ic-verifiable-credentials/src/: lib.rs
