[workspace]
resolver = "2"

members = [
    "dummy-relying-party",
]

[workspace.package]
version = "0.0.1"
authors = ["DFINITY Stiftung"]
edition = "2024"
repository = "https://github.com/dfinity/verifiable-credentials-sdk"
homepage = "https://github.com/dfinity/verifiable-credentials-sdk#readme"
license = "Apache-2.0"

[workspace.dependencies]
base64 = "0.21"
sha2 = "0.10"
lazy_static = "1.4"
serde_cbor = "0.11"
anyhow = "1.0"
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
ic-http-certification = "2.5.0"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]
