[workspace]
resolver = "2"

members = [
    "dummy-relying-party",
    "dummy-issuer",
    "rust-packages/ic-verifiable-credentials",
]

[workspace.package]
version = "1.0.0"
authors = ["DFINITY Stiftung"]
edition = "2024"
repository = "https://github.com/dfinity/verifiable-credentials-sdk"
homepage = "https://github.com/dfinity/verifiable-credentials-sdk#readme"
license = "Apache-2.0"

[workspace.dependencies]
base64 = "0.22"
sha2 = "0.10"
lazy_static = "1.4"
serde_cbor = "0.11"
serde_bytes = "0.11"
anyhow = "1.0"
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-macros = "0.15"
ic-certification = "2.2"
ic-http-certification = "2.5"
ic-verifiable-credentials = { path = "rust-packages/ic-verifiable-credentials" }
ic-canister-sig-creation = "1.1"
ic-signature-verification = "0.1.0"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]
