[package]
name = "dummy_issuer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# IC Dependencies
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-certification = "2.2"
# II Dependencies
vc_util = { git="https://github.com/dfinity/internet-identity", rev="14607ee43877b1ccbbea18d17e5a36cda15480bd" }
canister_sig_util = { git="https://github.com/dfinity/internet-identity", rev="14607ee43877b1ccbbea18d17e5a36cda15480bd" }
identity_core = { git = "https://github.com/dfinity/identity.rs.git", rev = "63d3683cf6b6e48136ffb6812125dd8addfbbe75", default-features = false, features = ["ic-wasm"] }
identity_credential = { git = "https://github.com/dfinity/identity.rs.git", rev = "63d3683cf6b6e48136ffb6812125dd8addfbbe75", default-features = false , features = ["ic-wasm", "validator"] }
identity_jose = { git = "https://github.com/dfinity/identity.rs.git", rev = "63d3683cf6b6e48136ffb6812125dd8addfbbe75", default-features = false}
# Other dependencies
serde_bytes = "0.11"
serde_json = "1"
lazy_static = "1.4"
sha2 = "^0.10" # set bound to match ic-certified-map bound

[dev-dependencies]
pocket-ic = "3.1.0"
serde = { version = "1", features = ["derive"] }
