[package]
name = "dummy_issuer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# IC Dependencies
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-certification.workspace = true
ic-verifiable-credentials.workspace = true

# II Dependencies
canister_sig_util.workspace = true

# Other dependencies
serde_bytes = "0.11"
serde_json = "1"
lazy_static = "1.4"
sha2 = "^0.10" # set bound to match ic-certified-map bound
base64 = "0.21"

[dev-dependencies]
pocket-ic = "3.1.0"
serde = { version = "1", features = ["derive"] }
