[package]
name = "dummy_issuer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# IC Dependencies
candid.workspace = true
ic-canister-sig-creation.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-certification.workspace = true
ic-verifiable-credentials.workspace = true
# unfortunately, there is a transitive dependency on getrandom which does _not_ compile to wasm unless we add this hacky workaround
ic-crypto-getrandom-for-wasm = { git="https://github.com/dfinity/ic", rev="faacac31032a9b98020475eb608fd63455603556" }

# Other dependencies
serde_bytes = "0.11"
serde_json = "1"
lazy_static = "1.4"
sha2 = "^0.10" # set bound to match ic-certified-map bound
base64.workspace = true

[dev-dependencies]
pocket-ic = "3.1.0"
serde = { version = "1", features = ["derive"] }
