[package]
name = "ic-verifiable-credentials"
description = "Verifiable credentials issuing and verification for IC canisters."
version = "0.1.0"
keywords = ["internet-computer", "verifiable", "credentials", "icp", "dfinity"]
categories = ["api-bindings", "data-structures", "no-std"]
edition = "2021"

[dependencies]
# ic dependencies
candid.workspace = true
ic-canister-sig-creation.workspace = true
ic-certification.workspace = true
ic-signature-verification.workspace = true
ic-cdk.workspace = true

# vc dependencies
identity_core = { git = "https://github.com/iotaledger/identity.rs", rev = "26afa2c5a7e14cfc7ea6bf9b3085624011227ef7", default-features = false, features = ["custom_time"] }
identity_credential = { git = "https://github.com/iotaledger/identity.rs", rev = "26afa2c5a7e14cfc7ea6bf9b3085624011227ef7", default-features = false , features = ["credential", "presentation", "validator"] }
identity_jose = { git = "https://github.com/iotaledger/identity.rs", rev = "26afa2c5a7e14cfc7ea6bf9b3085624011227ef7", default-features = false, features = ["custom_alg"] }

# other dependencies
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
serde_json = "1"
sha2.workspace = true
base64.workspace = true

[dev-dependencies]
assert_matches = "1.5"
