[package]
name = "ic-verifiable-credentials"
description = "Verifiable credentials issuing and verification for IC canisters."
version = "1.0.1"
keywords = ["internet-computer", "verifiable", "credentials", "icp", "dfinity"]
categories = ["api-bindings", "data-structures", "no-std"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
# ic dependencies
candid.workspace = true
ic-canister-sig-creation.workspace = true
ic-certification.workspace = true
ic-signature-verification.workspace = true
ic-cdk.workspace = true

# vc dependencies
identity_core = { version = "1.4.0", default-features = false, features = ["custom_time"] }
identity_credential = { version = "1.4.0", default-features = false , features = ["credential", "presentation", "validator"] }
identity_jose = { version = "1.4.0", default-features = false, features = ["custom_alg"] }

# other dependencies
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
serde_json = "1"
sha2.workspace = true
base64.workspace = true
regex = "1.11.1"

[dev-dependencies]
assert_matches = "1.5"
